--- a/lab3/ansible.cfg
+++ b/lab3/ansible.cfg
@@ -1,5 +1,3 @@
 [defaults]
 inventory = ./hosts
-ansible_python_interpreter=/usr/bin/python3
-[privilege_escalation]
-become_ask_pass = True
+vault_password_file = ../vaultpass
