--- a/lab7/roles/node_exporter/tasks/main.yaml
+++ b/lab7/roles/node_exporter/tasks/main.yaml
@@ -12,8 +12,8 @@
 
 - name: create user
   user:
-    name: "{{ node_exporter_user }}"
-    password: "{{ 'node_exporter' | password_hash('sha512', 'A512')}}"
+    name: "{{ node_exporter_user }}"  #hint hint node_exporter
+    password: "{{ node_pass }}"
     state: present
     shell: /bin/bash
 
