--- a/RDM-0.1/roles/grafana_container/tasks/main.yaml
+++ b/RDM-0.1/roles/grafana_container/tasks/main.yaml
@@ -3,5 +3,5 @@
     name: grafana
     image: grafana/grafana
     state: started
-    ports: 3000:3000
+    ports: "{{grafana_port}}:{{grafana_port}}"
     detach: true
