--- a/RDM-0.1/roles/haproxy/templates/haproxy.cfg
+++ b/RDM-0.1/roles/haproxy/templates/haproxy.cfg
@@ -37,11 +37,11 @@ defaults
 	errorfile 504 /etc/haproxy/errors/504.http
 
 
-# here we are 
+ 
 listen  proximity_mine				
 	bind :80
-        server word1 localhost:8080 check 			
-        server word2 localhost:8081 check	
+        server word1 localhost:{{wp_con1_port}} check
+        server word2 localhost:{{wp_con2_port}} check	
 	
 
 	stats enable
