--- a/RDM-0.1/roles/syslog/handlers/main.yaml
+++ b/RDM-0.1/roles/syslog/handlers/main.yaml
@@ -1,7 +1,7 @@
 - name: netplan
   shell: "netplan apply"
 
-- name: restrt rsyslog
+- name: restart rsyslog
   service:
     name: rsyslog
     state: restarted
