--- a/RDM-0.1/roles/mysql_exporter/tasks/main.yaml
+++ b/RDM-0.1/roles/mysql_exporter/tasks/main.yaml
@@ -3,8 +3,7 @@
     url: https://github.com/prometheus/mysqld_exporter/releases/download/v0.12.1/mysqld_exporter-0.12.1.linux-amd64.tar.gz
     dest: /opt/mysqld_exporter-0.12.1.linux-amd64.tar.gz
 
-
-- name: extract
+- name: extract sqlexpo
   unarchive:
     remote_src: yes
     src: /opt/mysqld_exporter-0.12.1.linux-amd64.tar.gz
@@ -13,7 +12,7 @@
 - name: create user
   user:
     name: "{{ mysql_exporter_user }}"
-    password: "{{ pass }}" 
+    password: "{{ mysql_exporter_pass }}" 
     state: present
     shell: /bin/bash
 
@@ -27,7 +26,7 @@
     src: database.sql
     dest: /tmp/database.sql
 
-- name: Create mysql user
+- name: apply Create mysql user
   shell: mysql --defaults-file=/etc/mysql/debian.cnf < /tmp/database.sql
 
 - name: reload mysql
@@ -45,9 +44,12 @@
   template:
     src: mysqld_exporter.service
     dest: /etc/systemd/system/mysqld_exporter.service
+  notify: restart systemd
 
 - name: start exporter service
   service:
     name: mysqld_exporter
     state: started
     enabled: yes
+
+
