--- a/RDM-0.1/roles/prometheus/templates/prometheus.yaml
+++ b/RDM-0.1/roles/prometheus/templates/prometheus.yaml
@@ -33,19 +33,19 @@ scrape_configs:
   - job_name: 'servers'
     static_configs:
      - targets:
-       - '{{ server1 }}:9100'
-       - '{{ server2 }}:9100'
+       - '{{ server1d }}:9100'
+       - '{{ server2d }}:9100'
 
 
   - job_name: 'bind'
     static_configs:
      - targets:
-       - '{{ server1 }}:9119'
-       - '{{ server2 }}:9119'
+       - '{{ server1d }}:9119'
+       - '{{ server2d }}:9119'
 
 
   - job_name: 'mysql'
     static_configs:
      - targets:
-       - '{{ server2 }}:9104'
+       - '{{ server2d }}:9104'
 
