--- a/RDM-0.1/roles/syslog/templates/51-telegraf.conf
+++ b/RDM-0.1/roles/syslog/templates/51-telegraf.conf
@@ -1,3 +1,3 @@
-*.* @@(o)influxdb.no.sleep:6514;RSYSLOG_SyslogProtocol23Format
+*.* @@(o)influxdb.no.sleep:{{telegraf_port}};RSYSLOG_SyslogProtocol23Format
 
 
