--- a/RDM-0.1/roles/wordpress_container/tasks/main.yaml
+++ b/RDM-0.1/roles/wordpress_container/tasks/main.yaml
@@ -6,6 +6,7 @@
     network_mode: bridge
     ports: "{{ host_port }}:80"
     detach: true
+    restart_policy: always
     env:
       WORDPRESS_DB_HOST: "{{mysql_server}}:{{mysql_port}}"
       WORDPRESS_DB_USER: "{{mysql_user}}"
