--- a/RDM-0.1/roles/telegraf/templates/telegraf.conf
+++ b/RDM-0.1/roles/telegraf/templates/telegraf.conf
@@ -11,5 +11,8 @@
   hostname = ""
   omit_hostname = false
 [[outputs.influxdb]]
+{if server == "server1" %}
+  urls = ["https://server2.no.sleep:8086"]
+  database = "telegraf"
 [[inputs.syslog]]
   server = "tcp://:{{telegraf_port}}"
