--- a/RDM/roles/prometheus/templates/prometheus.yaml
+++ b/RDM/roles/prometheus/templates/prometheus.yaml
@@ -30,14 +30,14 @@ scrape_configs:
 
 
   
-  - job_name: 'servers'
+  - job_name: 'nodes'
     static_configs:
      - targets:
        - '{{ server1d }}:9100'
        - '{{ server2d }}:9100'
 
 
-  - job_name: 'bind'
+  - job_name: 'binds'
     static_configs:
      - targets:
        - '{{ server1d }}:9119'
@@ -49,3 +49,9 @@ scrape_configs:
      - targets:
        - '{{ server2d }}:9104'
 
+
+  - job_name: 'apache helicopters'
+    static_configs:
+     - targets:
+       - '{{ server1d }}:9117'
+       - '{{ server2d }}:9117'
