--- a/exam project/files/mysqld.cnf
+++ b/exam project/files/mysqld.cnf
@@ -31,7 +31,7 @@ nice		= 0
 user		= mysql
 pid-file	= /var/run/mysqld/mysqld.pid
 socket		= /var/run/mysqld/mysqld.sock
-port		= 3306
+port		= {{ mysql_port }}
 basedir		= /usr
 datadir		= /var/lib/mysql
 tmpdir		= /tmp
@@ -40,7 +40,7 @@ skip-external-locking
 #
 # Instead of skip-networking the default is now to listen only on
 # localhost which is more compatible and is not less secure.
-bind-address		= 0.0.0.0
+bind-address		= {{ bind_address }}
 #
 # * Fine Tuning
 #
