--- a/exam project/roles/bind_exporter/tasks/main.yaml
+++ b/exam project/roles/bind_exporter/tasks/main.yaml
@@ -3,17 +3,19 @@
   get_url:
     url: https://dl.google.com/go/go1.13.3.linux-amd64.tar.gz
     dest: /opt/go1.13.3.linux-amd64.tar.gz
+  notify: extract go
 
-- name: extract
+- name: extract go
   unarchive:
     src: /opt/go1.13.3.linux-amd64.tar.gz
     dest: /opt/
     remote_src: yes
 
+
 - name: create user
   user:
     name: "{{ bind_exporter_user }}"
-    password: "{{ pass }}"
+    password: "{{ bind_exporter_pass }}"
 
     state: present
     shell: /bin/bash
