--- a/exam project/roles/node_exporter/tasks/main.yaml
+++ b/exam project/roles/node_exporter/tasks/main.yaml
@@ -2,18 +2,18 @@
   get_url:
     url: https://github.com/prometheus/node_exporter/releases/download/v0.18.1/node_exporter-0.18.1.linux-amd64.tar.gz
     dest: /opt/node_exporter-0.18.1.linux-amd64.tar.gz
+  notify: extract nodexpo
 
-- name: extract
+- name: extract nodexpo
   unarchive:
     remote_src: yes
     src: /opt/node_exporter-0.18.1.linux-amd64.tar.gz
     dest: /opt/
 
-
 - name: create user
   user:
-    name: "{{ node_exporter_user }}"  #hint hint node_exporter
-    password: "{{ pass }}"
+    name: "{{ node_exporter_user }}"  
+    password: "{{ node_exporter_pass }}"
     state: present
     shell: /bin/bash
 
