--- a/exam project/roles/syslog/tasks/main.yaml
+++ b/exam project/roles/syslog/tasks/main.yaml
@@ -2,4 +2,4 @@
   template:
     src: 51-telegraf.conf
     dest: /etc/rsyslog.d/51-telegraf.conf
-  notify: restrt rsyslog
+  notify: restart rsyslog
