--- a/exam project/roles/telegraf/templates/telegraf.conf
+++ b/exam project/roles/telegraf/templates/telegraf.conf
@@ -11,5 +11,8 @@
   hostname = ""
   omit_hostname = false
 [[outputs.influxdb]]
+{if if1 == "1" %}
+  urls = ["https://server2.no.sleep:8086"]
+  database = "telegraf"
 [[inputs.syslog]]
-  server = "tcp://:6514"
+  server = "tcp://:{{telegraf_port}}"
