--- a/exam project/roles/wordpress_container/tasks/main.yaml
+++ b/exam project/roles/wordpress_container/tasks/main.yaml
@@ -6,7 +6,9 @@
     network_mode: bridge
     ports: "{{ host_port }}:80"
     detach: true
+    restart_policy: always
     env:
-      WORDPRESS_DB_HOST: 192.168.56.6:3306
-      WORDPRESS_DB_USER: saba
-      WORDPRESS_DB_NAME: dbylib
+      WORDPRESS_DB_HOST: "{{mysql_server}}:{{mysql_port}}"
+      WORDPRESS_DB_USER: "{{mysql_user}}"
+      WORDPRESS_DB_NAME: "{{mysql_db}}"
+      WORDPRESS_DB_PASSWORD: "{{mysql_pass}}"
