--- a/exam project/roles/dns/vars/main.yaml
+++ b/exam project/roles/dns/vars/main.yaml
@@ -6,39 +6,29 @@ forwarders:
 locals:
   - 192.168.56.0/24
   - 127.0.0.0/24
+
 dns_records:
-  - name: no.sleep.
-    onlyone: yes
-    type: NS
-    address: server1.no.sleep.
+  - type: NS
+    entries:
+      - name: no.sleep.
+        address: server1.no.sleep.
+      - name: no.sleep.
+        address: server2.no.sleep.
+  - type: A
+    entries:
+      - name: server1.no.sleep.
+        address: 192.168.56.5
+      - name: server2.no.sleep.
+        address: 192.168.56.6
+      - name: servers.no.sleep.
+        addresses:
+          - 192.168.56.5
 
-  - name: no.sleep.
-    onlyone: yes
-    type: NS
-    address: server2.no.sleep.
-
-  - name: server1.no.sleep.
-    onlyone: yes
-    type: A
-    address: 192.168.56.5
-
-  - name: server2.no.sleep.
-    onlyone: yes
-    type: A
-    address: 192.168.56.6
-
-  - name: server.no.sleep.
-    onlyone: yes
-    type: A
-    address: 
-    - 192.168.56.6
-
-  - name: ns1.no.sleep.
-    onlyone: yes
-    type: CNAME
-    address: server1.no.sleep.
-
-  - name: ns2.no.sleep.
-    onlyone: yes
-    type: CNAME
-    address: server2.no.sleep.
+  - type: CNAME
+    entries:
+      - name: ns
+        address: servers.no.sleep.
+      - name: ns1
+        address: server1.no.sleep.
+      - name: ns2
+        address: server2.no.sleep.
